--- a/package.json
+++ b/package.json
@@ -27,10 +27,17 @@
     "@aws-sdk/s3-request-presigner": "^3.864.0",
     "@daveyplate/better-auth-ui": "^3.0.2",
     "@fal-ai/client": "^1.6.2",
+    "@hcaptcha/react-hcaptcha": "^1.16.0",
+    "@hookform/resolvers": "^5.2.2",
+    "@marsidev/react-turnstile": "^1.3.1",
     "@polar-sh/better-auth": "^1.1.0",
     "@polar-sh/sdk": "^0.34.13",
     "@prisma/client": "^6.5.0",
+    "@radix-ui/react-avatar": "^1.1.11",
+    "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
@@ -43,15 +50,17 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "inngest": "^3.40.1",
+    "input-otp": "^1.4.2",
     "lucide-react": "^0.539.0",
     "next": "^15.2.3",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-easy-crop": "^5.5.0",
+    "react-hook-form": "^7.68.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
-    "zod": "^3.24.2"
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
